--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>'Hello, 锵</h1>
    <md-button class="md-raised md-primary">Primary</md-button>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
@@ -13,7 +13,6 @@
   <p>
     HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
   </p>
-
   <h4>Angular</h4>
   <p>
     AngularJS is a toolset for building the framework most suited to your application development.
