--- a/app/views/navigation.html
+++ b/app/views/navigation.html
@@ -1,25 +1,31 @@
 
-  <md-content>
-    <md-toolbar>
-      <div class="md-toolbar-tools">
-        <md-button aria-label="Go Back">
-          Go Back
-        </md-button>
-        <h2>
-          <span>Toolbar with Standard Buttons</span>
-        </h2>
-        <span flex></span>
+<md-content>
+  <md-toolbar>
+    <div class="md-toolbar-tools">
+      <md-button aria-label="Go Back">
+        Go Back
+      </md-button>
+      <h2>
+        <span>Toolbar with Standard Buttons</span>
+      </h2>
+      <span flex></span>
 
-        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-          <md-button md-no-ink class="md-primary">讨论区</md-button>
-          <md-button md-no-ink class="md-primary">项目大厅</md-button>
-          <md-button md-no-ink class="md-primary">消息通知</md-button>
-          <md-button md-no-ink class="md-primary">用户</md-button>
-        </section>
-      </div>
-    </md-toolbar>
-  </md-content>
+      <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+        <md-button md-no-ink class="md-primary">讨论区</md-button>
+        <md-button md-no-ink class="md-primary">项目大厅</md-button>
+        <md-button md-no-ink class="md-primary">消息通知</md-button>
+        <md-button md-no-ink class="md-primary">用户</md-button>
+      </section>
+    </div>
+  </md-toolbar>
+</md-content>
 
 <div>
   <div ui-view></div>
+</div>
+
+<div class="footer">
+  <div class="container">
+    <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+  </div>
 </div>
