--- a/app/views/app/navigation.html
+++ b/app/views/app/navigation.html
@@ -1,23 +1,22 @@
-
 <md-content>
-  <md-toolbar>
+  <div class="navigationToolBar">
     <div class="md-toolbar-tools">
       <md-button aria-label="Go Back">
-        Go Back
+        Icon
       </md-button>
-      <h2>
-        <span>Toolbar with Standard Buttons</span>
-      </h2>
+      <h3>
+        <span>同济大学汽车学院</span>
+      </h3>
       <span flex></span>
 
-      <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+      <section layout="row" layout-sm="column" layout-align="center center" layout-wrap class="navigationToolBarSection">
         <md-button md-no-ink class="md-primary">讨论区</md-button>
         <md-button md-no-ink class="md-primary">项目大厅</md-button>
         <md-button md-no-ink class="md-primary">消息通知</md-button>
         <md-button md-no-ink class="md-primary">用户</md-button>
       </section>
     </div>
-  </md-toolbar>
+  </div>
 </md-content>
 
 <div>
