--- a/app/views/auth/auth.html
+++ b/app/views/auth/auth.html
@@ -8,7 +8,7 @@
 </div>
 
 
-<div class="authDiv">
+<div class="authContent">
   <div class="loginAndSignupDiv" layout="column" layout-align="center center">
 
     <div class="loginAndSignupInnerDiv">
@@ -16,7 +16,7 @@
         <div class="loginAndSignupRadialGradientLeftSide"></div>
         <div class="loginAndSignupRadialGradientLeft"></div>
         <div class="loginAndSignupSchoolIconDiv">
-          <img src="../images/schoolIcon.png" class="loginAndSignupSchoolIcon" />
+          <img src="../../images/schoolIcon.png" class="loginAndSignupSchoolIcon" />
         </div>
         <div class="loginAndSignupRadialGradientRight"></div>
         <div class="loginAndSignupRadialGradientRightSide"></div>
