图片的url调整

--- a/app/views/app/pages/home.html
+++ b/app/views/app/pages/home.html
@@ -60,7 +60,7 @@
           <span>累进</span>
         </div>
         <div layout="row" layout-align="center center">
-          <img src="../../images/home_projectExhibition_title.png"/>
+          <img src="images/home_projectExhibition_title.png"/>
           <span>负责人:</span>
           <span>{{project.dutyPerson}}</span>
         </div>
@@ -79,7 +79,7 @@
         <span>{{project.startTime}}</span>
         <span>{{project.endTime}}</span>
         <md-button layout="column" layout-align="center center">
-          <img src="../../images/home_projectExhibition_date.png"/>
+          <img src="images/home_projectExhibition_date.png"/>
           <span>立即加入</span>
         </md-button>
         <div class="projectExhibitionCellDateTriangle"></div>
