--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -309,7 +309,7 @@ md-toolbar md-icon.md-default-theme {
 // home.css
 
 .title {
-  background-image: url("../../images/home_background1.jpg");
+  background-image: url("../images/home_background1.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 710px;
@@ -730,7 +730,7 @@ md-toolbar md-icon.md-default-theme {
 
 
 .ads {
-  background-image: url("../../images/home_background2.png");
+  background-image: url("../images/home_background2.png");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 1500px;
