--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -18,8 +18,8 @@
   <div ng-messages="user.verifiedPassword.$error">
     <div ng-message="required">必填项</div>
     <!--    问题1     -->
-    <div ng-message=>{{user.password == user.verifiedPassword }} 密码不一致</div>
   </div>
+  <div ng-show="user.password != user.verifiedPassword" >密码不一致</div>
 </md-input-container>
 
 <md-button class="loginAndSignupSubmitBtn" ng-click="signup()" class="md-primary">注册</md-button>
