--- a/app/views/app/navigation.html
+++ b/app/views/app/navigation.html
@@ -13,7 +13,7 @@
         <md-button md-no-ink class="md-primary">讨论区</md-button>
         <md-button md-no-ink class="md-primary">项目大厅</md-button>
         <md-button md-no-ink class="md-primary">消息通知</md-button>
-        <md-button md-no-ink class="md-primary">用户</md-button>
+        <md-button md-no-ink class="md-primary">{{user.name}}</md-button>
       </section>
     </div>
   </div>
