所有的api都是放在apiservice里面的， 调用user service的login成功后不需要显示调用loginsuccess了，使用promise的链式调用

--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -1,7 +1,7 @@
 <md-input-container class="loginAndSignupInput">
   <label>用户名</label>
-  <input ng-model="user.name" required>
-  <div ng-messages="user.name.$error">
+  <input ng-model="user.username" required>
+  <div ng-messages="user.username.$error">
     <div ng-message="required">必填项</div>
   </div>
 </md-input-container>
