通知服务现在在后台运行

--- a/app/views/admin/login.html
+++ b/app/views/admin/login.html
@@ -1,4 +1,5 @@
-登陆
+<md-content>
 <input ng-model="user.username" placeholder="account"/>
 <input ng-model="user.password" placeholder="password"/>
 <md-button class="loginAndSignupSubmitBtn md-primary" ng-click="login()">登录</md-button>
+</md-content>
