项目查看与项目detail

--- a/app/views/app/navigation.html
+++ b/app/views/app/navigation.html
@@ -11,7 +11,7 @@
 
       <section layout="row" layout-sm="column" layout-align="center center" layout-wrap class="navigationToolBarSection">
         <md-button md-no-ink class="md-primary">讨论区</md-button>
-        <md-button md-no-ink class="md-primary">项目大厅</md-button>
+        <md-button md-no-ink class="md-primary" ui-sref="app.project.list">项目大厅</md-button>
         <md-button md-no-ink class="md-primary">消息通知</md-button>
         <md-button md-no-ink class="md-primary">{{user.name}}</md-button>
       </section>
