--- a/app/styles/publish.css
+++ b/app/styles/publish.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 1000px;
+  height: 1200px;
 }
 
 .publishBackground {
@@ -182,34 +182,43 @@
 }
 
 
-.publishState div:nth-child(1), .publishState div:nth-child(3), .publishState div:nth-child(5){
+.publishState div:nth-child(1), .publishState div:nth-child(3), .publishState div:nth-child(5), .publishState div:nth-child(7) {
   height: 5px;
-  width: 30%;
-  background: #000000;
+  width: 23%;
+  background: #443d36;
 }
 .publishState div:nth-child(1) {
   border-radius: 2px 0 0 2px;
 }
-.publishState div:nth-child(5){
+
+.publishState div:nth-child(7){
   border-radius: 0 2px 2px 0;
 }
-.publishState div:nth-child(2), .publishState div:nth-child(4) {
+.publishState div:nth-child(2), .publishState div:nth-child(4), .publishState div:nth-child(6) {
   display: inline-block;
-  height: 25px;
-  width: 25px;
-  background: transparent;
-  border: solid 5px #000000;
+  height: 20px;
+  width: 20px;
+  background-color: transparent;
+  box-shadow: 0 0 0 5px #443d36;
   border-radius: 50%;
   position: relative;
 }
+.publishState div:nth-child(2) {
+  border: 5px solid white;
+  background-color: #443d36;
+}
 
 .publishState div span {
-  top: -33px;
-  left: -33px;
-  width: 100px;
+  top: -35px;
+  left: -92.5px;
+  width: 200px;
+  text-align: center;
   position: absolute;
-  color: #000000;
+  color: #443d36;
   display: block;
+}
+.publishState div:nth-child(2) span {
+  top: -40px;
 }
 
 .publishInformation {
@@ -241,20 +250,28 @@
   margin-top: 15px;
 }
 
-md-checkbox {
+.publishInformation md-checkbox {
   margin-bottom: 0;
 }
-.md-title {
+.publishInformation .md-title {
   vertical-align: text-top;
 }
+.publishInformation .md-subhead {
+  font-weight: bold;
+}
+
+.publishInformation md-checkbox.md-checked .md-icon {
+  background-color: #ff453d;
+}
+
 .publishNextButton {
   display: inline-block;
   align-self: flex-end;
   margin-top: 5%;
 }
 
-.publishNextBtn {
-  background: #a6deb6;
+.publishNextButton > button.md-button.md-primary {
+  background-color: #443d36;
   color: #ffffff;
 }
 
@@ -267,53 +284,23 @@ md-checkbox {
   margin-right: 30px;
 }
 
-.publishInformationMentor {
+.publishInformationTitle {
   display: flex;
   flex-wrap: nowrap;
   justify-content: flex-start;
 }
 
-.publishInformationMentor > div {
+.publishInformationTitle > div {
   width: 30%;
   margin-right: 20%;
 }
 
-.publishInformationMember {
-  display: flex;
-  flex-direction: column;
-}
-.publishInformationMember > div {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: center;
-}
-.publishInformationMember md-input-container {
-  display: block;
-  margin: 0;
-  width: 30%;
+md-datepicker > button.md-button.md-icon-button {
+  margin-left: 0;
+  padding-left: 0;
+  width: auto;
 }
 
-.publishInformationMember md-input-container .md-errors-spacer {
-  display: none;
-}
-.publishInformationMember > md-chips .md-chip-input-container input {
-  height: 0 !important;
-  overflow: hidden !important;
-}
-
-.publishInformationMember > md-chips .md-chips, .publishInformationMember > md-chips .md-focused {
-  cursor: default;
-  box-shadow: none !important;
-}
-
-.publishInformationMember md-checkbox {
-  width: 100px;
-}
-.isChargeMan-false {
-  display: none;
-}
-
-.hasMember-false {
-  display: none;
+.publishInformationMemberNum > md-input-container {
+  width: 60px;
 }
