--- a/app/views/app/navigation.html
+++ b/app/views/app/navigation.html
@@ -1,7 +1,7 @@
 <md-content>
   <div class="navigationToolBar">
     <div class="md-toolbar-tools">
-      <md-button aria-label="Go Back">
+      <md-button aria-label="Go Back" ng-click="goToHome()">
         Icon
       </md-button>
       <h3>
