--- a/app/styles/auth.scss
+++ b/app/styles/auth.scss
@@ -115,89 +115,11 @@
   padding: 5px;
 }
 
-.authBackground {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 0;
-  overflow:hidden;
-}
-
-.authBackgroundIndex1 {
-
-  position: absolute;
-  left: 150px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 250px 375px 0 375px;
-  border-color: #443d36 transparent transparent transparent;
-
-}
-
-.authBackgroundIndex2 {
-  position: absolute;
-  left: -100px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 400px 600px 0 600px;
-  border-color: #ff453d transparent transparent transparent;
-
-}
-
-.authBackgroundIndex3 {
-
-  position: absolute;
-  left: -100px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 450px 675px 0 675px;
-  border-color: #1de6a8 transparent transparent transparent;
-
-}
-
-
-.authBackgroundIndex4 {
-  position: absolute;
-  left: -100px;
-
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 500px 750px 0 750px;
-  border-color: #a6deb6 transparent transparent transparent;
-
-}
-
-.authBackgroundIndex5 {
-  position: absolute;
-  left: -100px;
-
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 1500px 1000px 0;
-  border-color: transparent #dce1cb transparent transparent;
-
-}
-
-.authBackgroundIndex6 {
-
-  position: absolute;
-  left: -140px;
-
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 1500px 1000px 0;
-  border-color: transparent #b1ccb7 transparent transparent;
-
-}
 
 .loginAndSignupInnerDivInputPart button ~ md-progress-circular {
   top: -45px;
+  width: 40px !important;
+  height: 10px !important;
 }
 .loginAndSignupInnerDivInputPart .md-button[disabled] {
   background-color: #eeeeee;
