--- a/app/views/app/navigation.html
+++ b/app/views/app/navigation.html
@@ -1,7 +1,7 @@
 <md-content>
   <div class="navigationToolBar">
     <div class="md-toolbar-tools">
-      <md-button aria-label="Go Back" ng-click="goToHome()">
+      <md-button aria-label="Go Back" ui-sref="app.home">
         Icon
       </md-button>
       <h3>
@@ -13,7 +13,7 @@
         <md-button md-no-ink class="md-primary">讨论区</md-button>
         <md-button md-no-ink class="md-primary" ui-sref="app.project.list">项目大厅</md-button>
         <md-button md-no-ink class="md-primary">消息通知</md-button>
-        <md-button md-no-ink class="md-primary">{{user.name}}</md-button>
+        <md-button md-no-ink class="md-primary" ui-sref="app.info.personalInfo" aria-label="返回主页">{{user.name}}</md-button>
       </section>
     </div>
   </div>
