--- a/app/views/auth/auth.html
+++ b/app/views/auth/auth.html
@@ -1,12 +1,4 @@
-<div class="authBackground">
-  <div class="authBackgroundIndex6"></div>
-  <div class="authBackgroundIndex5"></div>
-  <div class="authBackgroundIndex4"></div>
-  <div class="authBackgroundIndex3"></div>
-  <div class="authBackgroundIndex2"></div>
-  <div class="authBackgroundIndex1"></div>
-</div>
-
+<div ui-view="background"></div>
 
 <div class="authContent">
   <div class="loginAndSignupDiv" layout="column" layout-align="center center">
@@ -22,7 +14,7 @@
         <div class="loginAndSignupRadialGradientRightSide"></div>
       </div>
 
-      <div class="loginAndSignupInnerDivInputPart" layout="column" layout-align="center center" ui-view></div>
+      <div class="loginAndSignupInnerDivInputPart" layout="column" layout-align="center center" ui-view="content"></div>
 
     </div>
   </div>
