--- a/app/views/app/pages/project/detail.html
+++ b/app/views/app/pages/project/detail.html
@@ -1,9 +1,10 @@
 <md-content>
+  <h2>{{roleInProject != '' ? '您为项目的' + roleInProject : ''}}</h2>
   <h2>项目名称</h2>
   <span>{{project.name}}</span>
   <h2>负责人</h2>
   <span>{{project.creator.name}}</span>
   <h2>介绍</h2>
   <span>{{project.introduction}}</span>
-  <md-button class="md-primary" ng-click="applyProject(project)">申请加入该项目</md-button>
+  <md-button class="md-primary" ng-click="showJoinDialog(project)">{{btnTitle}}</md-button>
 </md-content>
