--- a/app/views/app/pages/info/info.html
+++ b/app/views/app/pages/info/info.html
@@ -9,24 +9,24 @@
 
           <div class="personalInformationList">
             <div class="personalInformationItem">
+                <span class="titleFont">用户名</span>
+                <input type="text" ng-readonly="isPersonalInfoReadonly" ng-model="user.username">
+            </div>
+            <div class="personalInformationItem">
                 <span class="titleFont">姓名</span>
-                <input type="text" ng-readonly="isPersonalInfoReadonly" ng-model="personalInfo.name">
+                <input type="text" ng-readonly="isPersonalInfoReadonly" ng-model="user.name">
             </div>
             <div class="personalInformationItem">
-                <span class="titleFont">学号</span>
-                <input type="text" ng-readonly="isPersonalInfoReadonly" ng-model="personalInfo.id">
-            </div>
-            <div class="personalInformationItem">
-              <span class="titleFont">个人说明</span>
-              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="personalInfo.intro"></textarea>
+              <span class="titleFont">教育背景</span>
+              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="user.edu_experience"></textarea>
             </div>
             <div class="personalInformationItem">
               <span class="titleFont">活动经历</span>
-              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="personalInfo.experience"></textarea>
+              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="user.practice_experience"></textarea>
             </div>
             <div class="personalInformationItem">
-              <span class="titleFont">获得奖项</span>
-              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="personalInfo.awards"></textarea>
+              <span class="titleFont">技能</span>
+              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="user.professional_skill"></textarea>
             </div>
 
           </div>
@@ -42,16 +42,26 @@
         <md-tab-label>已发布项目</md-tab-label>
         <md-tab-body>
           <md-list>
-            <md-list-item class="md-3-line" ng-repeat="project in publishedPro">
+            <md-list-item class="md-3-line" ng-repeat="project in projects">
               <div class="md-list-item-text">
                 <h3>{{ project.name }}</h3>
                 <h4>{{ project.deadline }}</h4>
-                <p>{{ project.keyWords.join(' / ') }}</p>
+                <p>{{ project.keyword.join(' / ') }}</p>
               </div>
               <md-button class="md-secondary">Respond</md-button>
               <md-divider ng-if="!$last"></md-divider>
             </md-list-item>
           </md-list>
+          <div class="paginationBtn">
+            <div>
+              <md-button class="md-primary" ng-disabled="" ng-click="">前一页</md-button>
+              <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
+            </div>
+            <div>
+              <md-button class="md-primary" ng-disabled="" ng-click="">后一页</md-button>
+              <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
+            </div>
+          </div>
         </md-tab-body>
       </md-tab>
       <md-tab id="tab3">
