--- a/app/views/app/pages/project/list.html
+++ b/app/views/app/pages/project/list.html
@@ -11,3 +11,46 @@
     </div>
   </md-list-item>
 </md-list>
+
+
+<div class="homeProjectExhibition" layout="column" layout-align="center center">
+  <div class="projectExhibitionTitle">在创项目展示</div>
+  <div class="projectExhibitionContent" layout="column" layout-align="center center">
+    <div ng-repeat="project in projects" class="projectExhibitionCell" layout="row" layout-align="center center">
+      <div class="projectExhibitionCellTitle" layout="column" layout-align="center center">
+        <span>{{project.name}}</span>
+        <div class="projectExhibitionCellTitleTriangle isProgressive-{{project.isProgressive}}">
+          <span>累进</span>
+        </div>
+        <div layout="row" layout-align="center center">
+          <img src="images/home_projectExhibition_title.png"/>
+          <span>负责人:</span>
+          <span>{{project.team.charge_person.name}}</span>
+        </div>
+      </div>
+      <div class="projectExhibitionCellRecruit" layout="column" layout-align="center center">
+        <div layout="row" layout-align="center center">
+          <span class="isFullMenmber-{{project.team.member.length >= project.member_number}}">{{project.team.member.length}}</span>
+          <span>/{{project.member_number}}</span>
+        </div>
+        <span>招募情况</span>
+      </div>
+      <div class="projectExhibitionCellState" layout="column" layout-align="center center">
+        <span>{{project.state}}</span>
+      </div>
+      <div class="projectExhibitionCellDate" layout="column" layout-align="center center">
+        <span>{{project.startTime}}</span>
+        <span>{{project.endTime}}</span>
+        <md-button layout="column" layout-align="center center" ng-click="detail(project)">
+          <img src="images/home_projectExhibition_date.png"/>
+          <span>查看详情</span>
+        </md-button>
+        <div class="projectExhibitionCellDateTriangle"></div>
+      </div>
+
+    </div>
+  </div>
+  <div class="projectExhibitionMoreDiv">
+    <button>查看更多</button>
+  </div>
+</div>
