--- a/app/views/app/navigation.html
+++ b/app/views/app/navigation.html
@@ -13,7 +13,7 @@
         <md-button md-no-ink class="md-primary">讨论区</md-button>
         <md-button md-no-ink class="md-primary" ui-sref="app.project.list">项目大厅</md-button>
         <md-button md-no-ink class="md-primary">消息通知</md-button>
-        <md-button md-no-ink class="md-primary" ui-sref="app.info.personalInfo" aria-label="返回主页">{{user.name}}</md-button>
+        <md-button md-no-ink class="md-primary" ui-sref="{{infoSref}}" aria-label="个人信息">{{user.name}}</md-button>
       </section>
     </div>
   </div>
