--- a/app/views/app/pages/info/info.html
+++ b/app/views/app/pages/info/info.html
@@ -1,96 +1,4 @@
 <div  class="infoMainView">
   <div ui-view="background" class="publishBackground"></div>
-
-  <md-content class="md-padding infoContentDiv">
-    <md-tabs class="md-primary" md-selected="data.selectedIndex" md-dynamic-height md-border-bottom>
-      <md-tab id="tab1">
-        <md-tab-label>个人信息</md-tab-label>
-        <md-tab-body>
-
-          <div class="personalInformationList">
-            <div class="personalInformationItem">
-                <span class="titleFont">用户名</span>
-                <input type="text" ng-readonly="isPersonalInfoReadonly" ng-model="user.username">
-            </div>
-            <div class="personalInformationItem">
-                <span class="titleFont">姓名</span>
-                <input type="text" ng-readonly="isPersonalInfoReadonly" ng-model="user.name">
-            </div>
-            <div class="personalInformationItem">
-              <span class="titleFont">教育背景</span>
-              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="user.edu_experience"></textarea>
-            </div>
-            <div class="personalInformationItem">
-              <span class="titleFont">活动经历</span>
-              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="user.practice_experience"></textarea>
-            </div>
-            <div class="personalInformationItem">
-              <span class="titleFont">技能</span>
-              <textarea ng-readonly="isPersonalInfoReadonly" ng-model="user.professional_skill"></textarea>
-            </div>
-
-          </div>
-          <div class="personalInformationBtn">
-            <div>
-              <md-button class="md-primary" ng-disabled="personalInfoBtnDisabled" ng-click="personalInfoBtnClicked()" ng-bind="btnName"></md-button>
-              <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
-            </div>
-          </div>
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab2">
-        <md-tab-label>已发布项目</md-tab-label>
-        <md-tab-body>
-          <md-list>
-            <md-list-item class="md-3-line" ng-repeat="project in publishedProjects">
-              <div class="md-list-item-text">
-                <h3>{{ project.name }}</h3>
-                <h4>{{ project.deadline }}</h4>
-                <p>{{ project.keyword.join(' / ') }}</p>
-              </div>
-              <md-button class="md-secondary">Respond</md-button>
-              <md-divider ng-if="!$last"></md-divider>
-            </md-list-item>
-          </md-list>
-          <div class="paginationBtn">
-            <div>
-              <md-button class="md-primary" ng-disabled="publishedProPreviousBtnDisabled" ng-click="">前一页</md-button>
-              <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
-            </div>
-            <div>
-              <md-button class="md-primary" ng-disabled="publishedProNextBtnDisabled" ng-click="">后一页</md-button>
-              <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
-            </div>
-          </div>
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab3">
-        <md-tab-label>已加入项目</md-tab-label>
-        <md-tab-body>
-          <md-list>
-            <md-list-item class="md-3-line" ng-repeat="project in joinedProjects">
-              <div class="md-list-item-text">
-                <h3>{{ project.name }}</h3>
-                <h4>{{ project.deadline }}</h4>
-                <p>{{ project.keyword.join(' / ') }}</p>
-              </div>
-              <md-button class="md-secondary">Respond</md-button>
-              <md-divider ng-if="!$last"></md-divider>
-            </md-list-item>
-          </md-list>
-          <div class="paginationBtn">
-            <div>
-              <md-button class="md-primary" ng-disabled="joinedProPreviousBtnDisabled" ng-click="">前一页</md-button>
-              <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
-            </div>
-            <div>
-              <md-button class="md-primary" ng-disabled="joinedProNextBtnDisabled" ng-click="">后一页</md-button>
-              <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
-            </div>
-          </div>
-        </md-tab-body>
-      </md-tab>
-    </md-tabs>
-  </md-content>
-
+  <div ui-view="content" class="infoContentOutsideDiv"></div>
 </div>
