--- a/app/styles/join.scss
+++ b/app/styles/join.scss
@@ -83,7 +83,7 @@ md-dialog .md-dialog-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 20px 12px 0;
+  margin-right: 20px;
 }
 
 .joinDialog .md-button {
